# age_of_gold_backend

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  age_of_gold.py  alembic.ini  app.py  boot.sh  docker-compose.yml  flaskapp-deployment.yaml  generate_pem.py  init.py  main.py  main_cron.py  pyproject.toml  requirements.txt  schema.py  session.py  tox.ini  vars.env  worker.py
.github/workflows/: pub_img.yml
age_of_gold_cron/: Dockerfile_cron  README.md  main_cron.py  pyproject.toml
age_of_gold_cron/age_of_gold_cron/: cron_settings.py  database.py
age_of_gold_cron/age_of_gold_cron/models/: user_token.py
age_of_gold_cron/tests/: test_database.py
age_of_gold_worker/: Dockerfile_worker  README.md  pyproject.toml
age_of_gold_worker/age_of_gold_worker/: __init__.py  tasks.py  worker_settings.py
age_of_gold_worker/age_of_gold_worker/util/: avatar.py  mail_util.py  s3_client.py  util.py
age_of_gold_worker/tests/: test_tasks.py
age_of_gold_worker/tests/test_util/: test_avatar.py  test_mail.py  test_s3_client.py  test_util.py
alembic/: env.py  help_file
alembic/versions/: 0eee1b2c11cc_first_migration.py  912d01816484_added_some_models_for_the_map.py
app/: Dockerfile  __init__.py  boot.sh  config.py  database.py  docker-compose.yml  main.py  main_cron.py  pyproject.toml  requirements.txt  tasks.py
app/api/api_v1/: __init__.py  initialization.py
app/app/: database.py
app/app/celery_worker/: tasks.py
app/app/config/: config.py
app/app/models/: __init__.py  friend.py  guild.py  (+4 more)
app/celery_worker/: tasks.py
app/config/: config.py
app/migrations/: env.py
app/models/: __init__.py  friend.py  hexagon.py  post.py  tile.py  user.py  user_token.py
app/rest/: __init__.py  access_token_v1_0.py  add_tile_detail.py  get_hexagon_v1_0.py  get_tile_info_v1_0.py  hexagon_rest.py  login_v1_1.py  map_remove.py  map_remove_row.py  map_rest.py  map_row_rest.py  refresh_v1_0.py  refresh_v1_1.py  register_v1_0.py  register_v1_1.py  rest_util.py  test.py  test_rest.py  tile_change_v1_0.py  token_login_v1_0.py
app/routes/: __init__.py  forms.py  google_login.py  login_user_origin.py  regular_login.py
app/sock/: __init__.py  sock.py
app/sockets/: sockets.py
app/templates/: 404.html  500.html  avatar.html  base.html  index.html  login.html  test.html  upload.html  user.html
app/util/: avatar.py  generate_avatar.py  global_vars.py  gold_logging.py  util.py
app_old/: Dockerfile  __init__.py  age_of_gold.py  boot.sh  config.py  docker-compose.yml
app_old/models/: __init__.py  friend.py  hexagon.py  post.py  tile.py  user.py
app_old/rest/: __init__.py  hexagon_rest.py  map_rest.py  map_row_rest.py  rest_util.py  test.py
app_old/routes/: __init__.py  forms.py  login_user_origin.py
app_old/sock/: __init__.py  sock.py
app_old/templates/: 404.html  500.html  avatar.html  base.html  login.html  test.html  upload.html  user.html
app_old/util/: util.py
kubernetes/: 2_fastapi_secret.yaml  3_redis.yaml  4_postgres.yaml  5_fastapi.yaml  6_worker.yaml  7_cron_worker.yaml  age_of_gold_local.yaml  flask.yaml  flask_secret_local.yaml  namespace.yaml  postgres.yaml  redis.yaml
migrations/: env.py
migrations/versions/: 01ffd9ee8d7c_adding_unique_to_username.py  08d27bb74869_added_posts_for_user_interaction.py  0fbeba7c3872_adding_chat_inidicator_for_posts.py  116bf92d392e_adding_sender_id_to_global_messages.py  14e880e9a774_adding_a_login_origin_to_the_user.py  17471168a89a_adding_hexagon_and_tile_tables.py  19a10c18c5b2_added_friend_object.py  19c37ff8148b_group_functionality.py  1d172045142f_group_object.py  2244a75eaf37_added_friend_object.py  24682eecd8d3_friend_object_has_requested_indicator.py  2cd6a6ea940f_adding_email_to_user.py  2fd20c0c5358_adding_message_objects.py  327317a6b2af_removed_s_and_added_indices.py  38bb8bd661a8_adding_a_removed_indicator_on_the_.py  4233dfbb7940_colour_to_user.py  45e5acd494e5_added_tile_detail_on_hexagon_objects.py  46bb807f5616_initial_user_model.py  48d22f822768_adding_some_extra_user_information.py  4e250b2bc401_login.py  5822e6a8fa59_profile_indicators.py  5d1374e3d087_verification_for_email_and_unique_.py  5eac8e246390_adding_default_avatar_indicator_on_user.py  70799db92bad_adding_friends.py  78ab418c142c_group_and_chat_stuff.py  7b3d451a1b41_added_accepted_bool.py  7f8941450783_message_chat_and_group_for_communication.py  895581a97288_forgot_the_last_changed_datetime.py  918dd0e7ee53_added_friend_object.py  92d4ae706d06_removing_removed_indicator_on_friend_.py  97bc978ba8ff_added_friend_object.py  a6f5e88d0681_added_a_last_changed_indicator_to_tile.py  a85e9481ad0a_login.py  aeef7488a61c_adding_foreign_key_references.py  af0068b9f43f_group_and_chat_stuff.py  b77dfeefaf33_adding_r_s_q_to_the_tiles.py  cd80d9cbd8a7_added_friend_object.py  cf16e11a7eb8_adding_tile_lock_option.py  e1636aa46dff_fixing_some_of_the_friending_models.py  e1a48cc04773_login.py  (+2 more)
models/: __init__.py  user.py
models/map/: hexagon.py  tile.py
routes/: __init__.py  user_route.py
routes/map/: hexagon_route.py  tile_route.py
src/: database.py
src/celery_worker/: tasks.py
src/config/: config.py  jwt_key.py
src/models/: __init__.py  chat.py  friend.py  group.py  message.py  user.py  user_token.py
src/sockets/: sockets.py
src/templates/: delete_account_email.html  password_reset_email.html  password_reset_template.html
src/util/: decorators.py  mail_util.py  rest_util.py  security.py  storage_util.py  util.py
tests/: __init__.py  conftest.py  helpers.py  main_test.py  test_array_type.py  test_database.py  test_login.py  test_post.py  test_sockets.py  test_tasks.py
tests/models/: test_chat_methods.py  test_friend.py  test_user.py
tests/test_login/: conftest_login.py  test_login_direct.py  test_login_post.py
tests/test_models/: test_user.py  test_user_token.py
tests/test_register/: test_register_direct.py  test_register_post.py
tests/test_util/: test_avatar.py  test_decorators.py  test_mail.py  test_security.py  test_storage_util.py  test_util.py  test_util_groups_serialization.py
(+360 files in other folders)
