[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
exclude = "_ignore"

[tool.coverage.run]
branch = true
parallel = true
omit = [
]

[tool.poetry]
name = "age_of_gold"
version = "0.1.1"
description = "Age of Gold is a fun trading game. The first single player game that you play with multiple people"
authors = ["Grabot"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.14.0"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
sqlmodel = "^0.0.27"
alembic = "^1.17.0"
python-socketio = "^5.14.2"
websockets = "^15.0.1"
asyncio-redis = "^0.16.0"
redis = "^7.0.0"
fastapi-pagination = "^0.14.3"
celery = "^5.5.3"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.11"
apscheduler = "^3.11.0"
sqlalchemy = "^2.0.44"
argon2-cffi = "^25.1.0"
pyjwt = "^2.10.1"
pillow = "^12.0.0"
requests = "^2.32.5"
types-requests = "^2.32.4.20250913"
numpy = "^2.3.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"
pre-commit = "^4.3.0"
mypy = "^1.18.2"
python-socketio-stubs = "^5.14.1.1.20251014"
celery-stubs = "^0.1.3"
sqlalchemy-stubs = "^0.4"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
podman-compose = "^1.5.0"
bump-pydantic = "^0.8.0"
types-requests = "^2.32.4.20250913"
cryptography = "^46.0.3"
pytest-cov = "^7.0.0"
sqlalchemy2-stubs = "^0.0.2a38"
tox = "^4.31.0"
pylint = "^4.0.2"

[tool.pylint]
disable = [
    "W0511", # https://pylint.pycqa.org/en/latest/user_guide/messages/warning/fixme.html
    "C0411", # Conflicts with ruff's isort
    "W0613", # unused-argument, this is covered by Ruff ARG001
    "W0611", # unused-import, covered by Ruff F401
    "C0301", # line-too-long, covered by Ruff E501
    "W0718", # broad-exception-caught, covered by Ruff BLE001
    "W0719", # broad-exception-raised, covered by Ruff TRY002
    "W0212", # private member accessed, covered by Ruff SLF001
]
