[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "age_of_gold"
version = "1.0.0"
description = "Age of Gold is a fun trading game. The first single player game that you play with multiple people"
authors = [{ name = "Grabot" }]
requires-python = "==3.14.1"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "fastapi>=0.119.1,<0.120",
    "uvicorn>=0.38.0,<0.39",
    "sqlmodel>=0.0.27,<0.0.28",
    "alembic>=1.17.0,<2",
    "python-socketio>=5.14.2,<6",
    "websockets>=15.0.1,<16",
    "asyncio-redis>=0.16.0,<0.17",
    "redis>=7.0.0,<8",
    "cryptography>=46.0.3,<47",
    "httpx>=0.28.1,<0.29",
    "aiosqlite>=0.21.0,<0.22",
    "fastapi-pagination>=0.14.3,<0.15",
    "celery>=5.5.3,<6",
    "pydantic-settings>=2.11.0,<3",
    "asyncpg>=0.31.0,<0.32",
    "psycopg2-binary>=2.9.11,<3",
    "apscheduler>=3.11.0,<4",
    "sqlalchemy>=2.0.44,<3",
    "argon2-cffi>=25.1.0,<26",
    "pyjwt>=2.10.1,<3",
    "pillow>=12.0.0,<13",
    "requests>=2.32.5,<3",
    "numpy>=2.3.4,<3",
    "python-multipart>=0.0.20",
    "sib-api-v3-sdk>=7.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1,<0.15",
    "pre-commit>=4.3.0,<5",
    "mypy>=1.18.2,<2",
    "python-socketio-stubs>=5.14.1.1.20251014,<6",
    "celery-stubs>=0.1.3,<0.2",
    "sqlalchemy-stubs>=0.4,<0.5",
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-mock>=3.15.1,<4",
    "podman-compose>=1.5.0,<2",
    "bump-pydantic>=0.8.0,<0.9",
    "types-requests>=2.32.4.20250913,<3",
    "pytest-cov>=7.0.0,<8",
    "sqlalchemy2-stubs>=0.0.2a38,<0.0.3",
    "tox>=4.31.0,<5",
    "pylint>=4.0.2,<5",
    "bandit>=1.8.6,<2",
    "toml>=0.10.2",
    "fakeredis>=2.32.1",
]

[tool.black]
line-length = 100

[tool.mypy]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
exclude = "_ignore"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
]

[tool.coverage.report]
fail_under = 100
precision = 0
show_missing = true
skip_covered = false
skip_empty = false
sort = "Cover"

[tool.pylint]
disable = [
    "W0511", # https://pylint.pycqa.org/en/latest/user_guide/messages/warning/fixme.html
    "C0411", # Conflicts with ruff's isort
    "W0613", # unused-argument, this is covered by Ruff ARG001
    "W0611", # unused-import, covered by Ruff F401
    "C0301", # line-too-long, covered by Ruff E501
    "W0718", # broad-exception-caught, covered by Ruff BLE001
    "W0719", # broad-exception-raised, covered by Ruff TRY002
    "W0212", # private member accessed, covered by Ruff SLF001
]

[tool.uv.sources]
age-of-gold-worker = { path = "../../../../../usr/local/age_of_gold/age_of_gold_worker" }
