[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "age_of_gold_cron"
version = "1.0.0"
description = "Age of Gold cron worker"
authors = [{ name = "Grabot" }]
requires-python = "==3.14.1"
license = "GPL-3.0-or-later"

dependencies = [
    "sqlmodel>=0.0.27,<0.0.28",
    "alembic>=1.17.0,<2",
    "redis>=7.0.0,<8",
    "aiosqlite>=0.21.0,<0.22",
    "pydantic-settings>=2.11.0,<3",
    "psycopg2-binary>=2.9.11,<3",
    "sqlalchemy>=2.0.44,<3",
    "asyncpg>=0.31.0,<0.32",
    "pyjwt>=2.10.1,<3",
    "argon2-cffi>=25.1.0,<26",
    "cryptography>=46.0.3,<47",
]

[tool.hatch.build.targets.sdist]
include = ["."]

[tool.hatch.build.targets.wheel]
include = ["."]
